# dw_dj3

./: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
bot/: models.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_override_custom_user_model.py
deploy/: docker-compose.yaml  nginx.conf
tests/: factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
tests/categorys/: test_category_create_view.py  test_category_view.py
todolist/: settings.py  urls.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0001_initial.py  0002_add_goals_model.py  0002_alter_goalcomment_text.py  0003_add_goals_comment_model.py  0003_board_goalcategory_board_boardparticipant.py  0004_add_goals_comment_model_2.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
todolist3/: asgi.py  settings.py  urls.py  wsgi.py
